--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.4",
+    "reselect": "^5.1.1",
     "sitemap": "^8.0.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.0",
     "uuid": "^10.0.0",
     "xlsx": "^0.18.5"
   },
